# ghc-wx

compiler/GHC/: CmmToLlvm.hs  Parser.hs
compiler/GHC/Cmm/: Lexer.hs  Parser.hs
compiler/GHC/Parser/: HaddockLex.hs  Lexer.hs
docs/storage-mgt/: code.sty
hadrian/doc/: windows.md
libffi-tarballs/: README.md
libraries/Cabal/bootstrap/: linux-9.4.8.json
libraries/Win32/Media/: Win32.hs
libraries/deepseq/: deepseq.cabal
libraries/exceptions/: exceptions.cabal
libraries/filepath/: filepath.cabal
libraries/hpc/: .gitignore  .gitlab-ci.yml  README.md  changelog.md  hpc.cabal
libraries/os-string/: os-string.cabal
libraries/semaphore-compat/: .gitlab-ci.yml  LICENSE  changelog.md  readme.md  semaphore-compat.cabal
libraries/semaphore-compat/.gitlab/: ci.sh
libraries/stm/tests/: stm046.stdout
libraries/text/: text.cabal
libraries/time/: fullcheck.ps1
nofib/: .gitignore  .gitlab-ci.yml  README.make.mkd  README.md  Simon-nofib-notes  cabal.project.head-hackage
nofib/gc/cacheprof/: Main.hs  Makefile
nofib/gc/circsim/: Main.lhs  Makefile
nofib/gc/constraints/: Main.hs  Makefile
nofib/gc/fibheaps/: Makefile  stuff
nofib/gc/fulsom/: Interval.hs  Main.hs  Makefile  Oct.hs  Types.hs  stuff  stuff-SAVE  stuff2
nofib/gc/gc_bench/: Main.hs  Makefile
nofib/gc/happy/: .gitignore  AbsSyn.lhs  AttrGrammarParser.hs  GenUtils.lhs  Grammar.lhs  Lexer.lhs  Main.lhs  Makefile  ParseMonad.lhs  Parser.hs  Paths_happy.hs  ProduceCode.lhs  Set.hs
nofib/gc/hash/: Makefile
nofib/gc/lcss/: Makefile
nofib/gc/linear/: Makefile
nofib/gc/mutstore2/: Makefile
nofib/gc/power/: Makefile
nofib/gc/spellcheck/: Makefile
nofib/gc/treejoin/: Makefile
nofib/imaginary/bernouilli/: Makefile
nofib/imaginary/integrate/: Main.hs  Makefile  integrate.stdout
nofib/imaginary/kahan/: Makefile
nofib/imaginary/wheel-sieve2/: Makefile
nofib/mk/: ghc-opts.mk
nofib/parallel/blackscholes/: Makefile
nofib/parallel/coins/: Makefile  coins.hs
nofib/parallel/gray/: Construct.hs  Data.hs  Eval.hs  Geometry.hs  Illumination.hs  Intersections.hs  Interval.hs  Makefile
nofib/parallel/linsolv/: Makefile
nofib/parallel/mandel/: Makefile
nofib/parallel/matmult/: ListAux.hs  Main.hs  Makefile
nofib/parallel/minimax/: Board.hs  Makefile  minimax.note  minimax.stdout
nofib/parallel/nbody/: Makefile
nofib/parallel/parfib/: Makefile
nofib/parallel/partak/: Makefile
nofib/parallel/partree/: Makefile
nofib/parallel/prsa/: Makefile
nofib/parallel/queens/: Makefile
nofib/parallel/quicksort/: QuickSort.hs  QuickSortD.hs
nofib/parallel/ray/: Makefile
nofib/parallel/sumeuler/: Makefile  SumEulerPrimes.hs
nofib/parallel/transclos/: Main.hs  Makefile  TransClos.hs
nofib/parallel/warshall/: Makefile
nofib/real/: Makefile
nofib/real/ben-raytrace/: BVH.hs  BoundingBox.hs  Colour.hs  Figure.hs  Image.hs  Interval.hs  Main.hs  Makefile  Matrix.hs  Mesh.hs  README.mkd  Random.hs  RandomDist.hs  Ray.hs  STL.hs  Sampler.hs  SamplerMonad.hs  UnboxedBVH.hs  Vector.hs  ben-raytrace.faststdout  ben-raytrace.slowstdout  ben-raytrace.stdout  monkey.stl  ray.cabal
nofib/real/ben-raytrace/Random/: Lehmer64.hs  Lehmer64Mut.hs  Wyhash64.hs
nofib/real/ben-raytrace/SamplerMonad/: Naive.hs  STRand.hs  Unboxed.hs
nofib/real/ben-raytrace/Scene/: Scene1.hs  Scene2.hs  Type.hs
nofib/real/cacheprof/: Main.hs
nofib/real/compress/: BinConv.hs  BinTest.hs  Decode.hs  Lzw.hs  Lzw2.hs  Main.hs  Makefile  PTTrees.hs  Uncompress.hs
nofib/real/compress2/: Encode.hs  Makefile  WriteRoutines.hs
nofib/real/fluid/: S_Array.hs
nofib/real/fulsom/: Csg.hs  Interval.hs  Kolor.hs  Main.hs  Makefile  Matrix.hs  Quad.hs  Vector.hs
nofib/real/grep/: Makefile
nofib/real/hidden/: Makefile
nofib/real/hpg/: README.nofib
nofib/real/infer/: Infer.hs  InferMonad.hs  Main.hs  Makefile  Type.hs
nofib/real/mkhprog/: Main.lhs  Makefile  mkhprog.stdin
nofib/real/pic/: NofibUtils.hs
nofib/real/rsa/: Main.hs  Makefile  rsa.faststdin  rsa.faststdout  rsa.slowstdout  rsa.stdin  rsa.stdout
nofib/real/scs/: LinearAlgebra.hs  Parse.hs  Simulate.hs
nofib/real/smallpt/: Makefile  README.mkd  smallpt.hs  smallpt.slowstdout  smallpt.stdout
nofib/real/veritas/: Kernel.hs  Main.hs  Sub_Core3.hs  Vtslib.hs
nofib/shake/: CachegrindParse.hs  Merge.hs  README.mkd  nofib-run.cabal
nofib/shake/compare/: Compare.hs  LabelMatch.hs
nofib/shake/runner/: Main.hs  ParseResults.hs  PerfStatParse.hs  RunnerTypes.hs  Utils.hs
nofib/shake/src/: Measurements.hs
nofib/shootout/binary-trees/: Main.hs  Makefile
nofib/shootout/fasta/: Makefile  boot.sh  fasta-c.c
nofib/shootout/k-nucleotide/: Main.hs  Makefile  boot.sh
nofib/shootout/n-body/: Main.hs  Makefile
nofib/shootout/reverse-complement/: Main.hs  Makefile  (+2 more)
utils/genprimopcode/: Lexer.hs  Parser.hs
utils/hpc/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  hpc-bin.cabal
utils/hpc/.devcontainer/: devcontainer.json
utils/hpc/app/: Main.hs
utils/hpc/docs/: about.rst  conf.py  examples.rst  hpc.rst  index.rst
utils/hpc/src/Trace/Hpc/: Combine.hs  Draft.hs  Flags.hs  Lexer.hs  Main.hs  Map.hs  Markup.hs  Overlay.hs  Parser.hs  Parser.y.source  Plugin.hs  Report.hs  ShowTix.hs  Sum.hs  Utils.hs
utils/hpc/test/: Main.hs  README.md  Utils.hs
utils/hpc/test/Combine/: Tests.hs
utils/hpc/test/Combine/gold/: Help.stdout
utils/hpc/test/GHC/: Tests.hs
utils/hpc/test/GHC/gold/: T20568.stdout
utils/hpc/test/GHC/inputs/: T11798.hs  T2991.hs
utils/hpc/test/Map/: Tests.hs
utils/hpc/test/Map/gold/: Help.stdout
utils/hpc/test/Report/: Tests.hs
utils/hpc/test/Report/gold/: RecipNormal.stdout  RecipXML.stdout
utils/hpc/test/Report/input/Recip/: Recip.tix
utils/hpc/test/ShowTix/: Tests.hs
utils/hpc/test/ShowTix/gold/: Recip.stdout
utils/hpc/test/ShowTix/input/Recip/: Recip.hs
utils/hpc/test/ShowTix/input/Recip/.hpc/: Main.mix
utils/hpc/test/Sum/: Tests.hs
utils/hpc/test/Sum/gold/: Help.stdout
utils/hpc/test/Version/: Tests.hs
utils/hpc/test/Version/gold/: Version.stdout
utils/hsc2hs/: hsc2hs.cabal
(+141 files in other folders)
