cabal-version: 2.2
name: hpc-bin
version: 0.69
license: BSD-3-Clause
license-File: LICENSE
copyright: (c) Andy Gill, Colin Runciman
author: Andy Gill, Colin Runciman
maintainer: XXX
synopsis: Hpc is a tool for generating coverage reports for Haskell projects.
description: Hpc is a tool for generating coverage reports in various output formats for Haskell projects.
category: Development
bug-reports: https://gitlab.haskell.org/hpc/hpc-bin/-/issues
extra-doc-files:
  README.md
  CHANGELOG.md
build-type: Simple

source-repository head
    type:     git
    location: https://gitlab.haskell.org/hpc/hpc-bin.git

Flag build-tool-depends
    Description: Use build-tool-depends
    Default: True

Flag ci-build
    Description: Use -Wall -Werror -Wcompat
    Default: False

executable hpc
    default-language: Haskell2010
    hs-source-dirs:
      app,
      src
    main-is: Main.hs
    other-modules: Trace.Hpc.Parser
                   Trace.Hpc.Combine
                   Trace.Hpc.Draft
                   Trace.Hpc.Flags
                   Trace.Hpc.Lexer
                   Trace.Hpc.Plugin
                   Trace.Hpc.Markup
                   Trace.Hpc.Map
                   Trace.Hpc.Sum
                   Trace.Hpc.Overlay
                   Trace.Hpc.Report
                   Trace.Hpc.ShowTix
                   Trace.Hpc.Utils
                   Trace.Hpc.Main
                   Paths_hpc_bin
    autogen-modules: Paths_hpc_bin

    if flag(ci-build)
      ghc-options: -Wall -Wcompat -Werror

    build-depends: base       >= 4   && < 5,
                   deepseq    >= 1.4.4 && < 1.6,
                   directory  >= 1   && < 1.4,
                   filepath   >= 1   && < 1.6,
                   containers >= 0.1 && < 0.8,
                   array      >= 0.1 && < 0.6,
                   hpc        >= 0.6.2 && < 0.8

    if flag(build-tool-depends)
      build-tool-depends: happy:happy >= 1.20.0


test-suite hpc-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_hpc_bin
      Utils
      GHC.Tests
      ShowTix.Tests
      Report.Tests
      Version.Tests
      Map.Tests
      Sum.Tests
      Combine.Tests
  autogen-modules:
      Paths_hpc_bin
  hs-source-dirs:
      test
  build-tool-depends: hpc-bin:hpc
  build-depends:
      base         >= 4   && < 5
    , directory    >= 1   && < 1.4
    , filepath     >= 1   && < 1.5
    , process      ^>= 1.6
    , tasty        ^>= 1.4
    , tasty-golden ^>= 2.3
    , tasty-hunit  ^>= 0.10
    , text         ^>= 2.0
    , utf8-string  ^>= 1.0
  default-language: Haskell2010
